--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,19 +5,20 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0f1419",
-  "theme_color": "#0f1419",
+  "theme_color": "#10B981",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/manifest-icon-192",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/manifest-icon-512",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
-
