Fix Supabase types and add NOT NULL constraint to avatar_color

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:generate": "supabase gen types typescript --project-id=brllkhhysdhtbzvnuuox --schema=public > src/lib/database.types.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
