Update project configuration and add new features
- Added support for TypeScript type checking with a new script in package.json.
- Introduced a GitHub Actions workflow for automated TypeScript type checking on pull requests and pushes.
- Updated .gitignore to exclude .cursor files.
- Changed the formatter configuration in biome.json from tabs to spaces for consistency.
- Added new dependencies: recharts for charting and supabase for database interactions.
- Created new components for player management, including modals for editing and adding players, and a ranking chart for visualizing player statistics.
- Enhanced the player statistics page with new features and improved UI components.
- Added a ColorPicker component for selecting avatar colors.
- Implemented a new SQL function in Supabase to fetch ranking evolution data.

This commit enhances the overall functionality and maintainability of the project.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "biome check .",
     "lint:fix": "biome check . --write",
     "format": "biome format . --write",
+    "typecheck": "tsc --noEmit",
     "db:generate": "supabase gen types typescript --project-id=brllkhhysdhtbzvnuuox --schema=public > src/lib/database.types.ts"
   },
   "dependencies": {
@@ -17,7 +18,8 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-easy-crop": "^5.5.6"
+    "react-easy-crop": "^5.5.6",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
@@ -25,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "supabase": "^2.72.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
